--- a/webclient/app/views/login.html
+++ b/webclient/app/views/login.html
@@ -1,8 +1,8 @@
 <form name="loginForm" ng-submit="login()" novalidate>
   <div>
-    <label for="email">Email</label>
-    <input name="email" class="form-control" type="email" id="email" placeholder="Email"
-           ng-model="email">
+    <label for="username">User Name</label>
+    <input name="username" class="form-control" type="username" id="username" placeholder="UserName"
+           ng-model="username">
   </div>
   <div>
     <label for="password">Password</label>
