--- a/webclient/app/views/dashboard.html
+++ b/webclient/app/views/dashboard.html
@@ -2,7 +2,8 @@
 <div ng-hide="posts.length">You have no posts. <a ng-href="/#/addpost">Add a post</a></div>
 <div class="panel panel-default" ng-repeat="post in posts">
   <div class="panel-body">
-    <a ng-href="/#/viewpost/{{ post.id }}">{{ post.subject }}</a> | Comments
-    <span class="badge">{{ post.commentCount }}</span>
+    <a ng-href="/#/viewpost/{{ post.id }}">{{ post.name }}</a> | Comments
+    <span class="badge">{{ post.url }}</span>
   </div>
 </div>
+
